# groth16-wasm-utils

./: Cargo.toml
resources/: proof.json  verification_key.json
src/: lib.rs
tests/: verification.rs
